different sampling rate

--- a/rekall/tutorials/01 Cyclist Detection.ipynb
+++ b/rekall/tutorials/01 Cyclist Detection.ipynb
@@ -70,12 +70,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "484093e1c08f4a9e92ce0bd4a7367c4a",
+       "model_id": "ec151bad4c2f46d8b355aace57c7683e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VGridWidget(vgrid_spec={'compressed': True, 'data': b'x\\x9c\\xcc\\xbd\\xdb\\x8ed\\xc9y\\xac\\xf9*\\x04\\xafg6\\xfc|\\x98\\…"
+       "VGridWidget(vgrid_spec={'compressed': True, 'data': b'x\\x9c\\xcc\\xbd\\xdd\\xae-Kr\\x9d\\xf7*B_[\\x8d\\xfc\\xff\\xd1\\xa5…"
       ]
      },
      "metadata": {},
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,18 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3462da609067470197889a4fb68d3f3b",
+       "model_id": "49192aebed674a1cb7c7b9fad0512d7c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VGridWidget(vgrid_spec={'compressed': True, 'data': b'x\\x9c\\xd4\\x9d\\xcb\\xae,Ir]\\x7f\\x85\\xa81\\xd1\\xf0\\xf7CC\\xfd…"
+       "VGridWidget(vgrid_spec={'compressed': True, 'data': b'x\\x9c\\xd4\\xbd\\xcb\\x8e4Ir\\xa5\\xf9*\\x8dZ7\\nz\\xbf\\xf4r^af7\\…"
       ]
      },
      "metadata": {},
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,18 +159,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8e378b878244319a7064373b1c69c28",
+       "model_id": "35750e4cd90c40a4bbac7bc9c0743359",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VGridWidget(vgrid_spec={'compressed': True, 'data': b'x\\x9c\\xd4\\x9d\\xcb\\xae,Ir]\\x7f\\x85\\xa81\\xd1\\xf0\\xf7CC\\xfd…"
+       "VGridWidget(vgrid_spec={'compressed': True, 'data': b'x\\x9c\\xd4\\xbd\\xcb\\x8e4Ir\\xa5\\xf9*\\x8dZ7\\nz\\xbf\\xf4r^af7\\…"
       ]
      },
      "metadata": {},
@@ -186,18 +186,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a5cbbe7b58b401592b0ae7b63b4314f",
+       "model_id": "042d00b5947d4777926acf4198091a6e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VGridWidget(vgrid_spec={'compressed': True, 'data': b'x\\x9c\\xcc\\xbd\\xdb\\xaefIv\\x9d\\xf7*B_\\xcbD\\x9c\\x0f\\xbe\\xf4…"
+       "VGridWidget(vgrid_spec={'compressed': True, 'data': b'x\\x9c\\xcc\\xbd\\xdb\\x8ef\\xc9q\\xa5\\xf9*\\r^7\\x08?\\x1f\\xe6r^a…"
       ]
      },
      "metadata": {},
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "dict_keys([0, 3])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,13 +403,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9be75696378d4aa79013e5624c0c2193",
+       "model_id": "2db764846c0948aca3e93587ac337227",
        "version_major": 2,
        "version_minor": 0
       },
@@ -436,13 +436,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03a133ba20c34c6e824d3c2dd7fe6eb7",
+       "model_id": "393ea7b08d3d46a590e3aade0273eb2a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -501,7 +501,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For illustration only \n",
+    "\n",
+    "# Interval\n",
+    "car_object = Interval(\n",
+    "    Bounds3D(t1=0, t2=0.1, x1=0.1, x2=0.3, y1=0.1, y2=0.7), \n",
+    "    payload={'class': 'car'}\n",
+    ")\n",
+    "\n",
+    "car_tracking = Interval(\n",
+    "    Bounds3D(0, 4, 0.1, 0.3, 0.1, 0.7), \n",
+    "    payload={'class': 'car'}\n",
+    ")\n",
+    "\n",
+    "# Interval Set\n",
+    "car_trackings = IntervalSet([\n",
+    "    Interval(Bounds3D(0, 4, 0.1, 0.3, 0.1, 0.7), payload={'class': 'car'}),\n",
+    "    Interval(Bounds3D(8, 10, 0.15, 0.35, 0.2, 0.8), payload={'class': 'car'}),\n",
+    "    Interval(Bounds3D(22, 32, 0.2, 0.4, 0.2, 0.8), payload={'class': 'car'}),\n",
+    "    Interval(Bounds3D(15, 40, 0.2, 0.5, 0.25, 0.85), payload={'class': 'car'})\n",
+    "])\n",
+    "\n",
+    "# Interval Set Mapping\n",
+    "cars = IntervalSetMapping({\n",
+    "    0: IntervalSet([\n",
+    "        Interval(Bounds3D(0, 4, 0.1, 0.3, 0.1, 0.7), payload={'class': 'car'}),\n",
+    "        Interval(Bounds3D(8, 10, 0.15, 0.35, 0.2, 0.8), payload={'class': 'car'}),\n",
+    "        Interval(Bounds3D(22, 32, 0.2, 0.4, 0.2, 0.8), payload={'class': 'car'}),\n",
+    "        Interval(Bounds3D(15, 40, 0.2, 0.5, 0.25, 0.85), payload={'class': 'car'})\n",
+    "    ]),\n",
+    "    3: IntervalSet([\n",
+    "        Interval(Bounds3D(3, 10, 0.05, 0.5, 0.1, 0.8), payload={'class': 'car'}),\n",
+    "        Interval(Bounds3D(8, 15, 0.1, 0.55, 0.2, 0.6), payload={'class': 'car'}),\n",
+    "        Interval(Bounds3D(20, 24, 0.2, 0.6, 0.2, 0.8), payload={'class': 'car'}),\n",
+    "        Interval(Bounds3D(34, 48, 0.25, 0.55, 0.2, 0.9), payload={'class': 'car'})\n",
+    "    ])\n",
+    "})\n",
+    "\n",
+    "# Query 1\n",
+    "# Rekall data model:\n",
+    "car_tracking1 = IntervalSet([\n",
+    "    Interval(Bounds3D(0, 1, 0.1, 0.3, 0.1, 0.7), payload={'class': 'car', 'id': 1}),\n",
+    "    Interval(Bounds3D(1, 2, 0.15, 0.35, 0.2, 0.8), payload={'class': 'car', 'id': 1}),\n",
+    "    Interval(Bounds3D(2, 3, 0.2, 0.4, 0.2, 0.8), payload={'class': 'car', 'id': 1}),\n",
+    "    Interval(Bounds3D(3, 4, 0.2, 0.5, 0.25, 0.85), payload={'class': 'car', 'id': 1})\n",
+    "])\n",
+    "\n",
+    "car_tracking2 = IntervalSet([\n",
+    "    Interval(Bounds3D(51, 52, 0.1, 0.3, 0.1, 0.7), payload={'class': 'car', 'id': 1}),\n",
+    "    Interval(Bounds3D(52, 53, 0.15, 0.35, 0.2, 0.8), payload={'class': 'car', 'id': 1}),\n",
+    "    Interval(Bounds3D(53, 54, 0.2, 0.4, 0.2, 0.8), payload={'class': 'car', 'id': 1}),\n",
+    "    Interval(Bounds3D(54, 55, 0.2, 0.5, 0.25, 0.85), payload={'class': 'car', 'id': 1})\n",
+    "])\n",
+    "\n",
+    "car_search_parking = IntervalSet([\n",
+    "    Interval(Bounds3D(0, 55, 0.1, 0.5, 0.1, 0.85), \n",
+    "             payload={'class': 'car', 'id': 1}),\n",
+    "    Interval(Bounds3D(70, 100, 0.2, 0.7, 0.1, 0.9), \n",
+    "             payload={'class': 'car', 'id': 3})\n",
+    "])\n",
+    "\n",
+    "# My data model:\n",
+    "# Car tracking\n",
+    "car_tracking = [\n",
+    "    {\n",
+    "        \"start_time\": 0\n",
+    "        \"end_time\": 20\n",
+    "        \"tubes\": [(t, x1, x2, y1, y2), ...]\n",
+    "        \"event_class\": \"car_tracking\"\n",
+    "        \"event_id\": 1\n",
+    "        \"metadata\": {\n",
+    "            \"car_id\": 1,\n",
+    "            \"car_color\": \"red\", \n",
+    "            \"car_brand\": \"Toyota\"\n",
+    "        }\n",
+    "    }, \n",
+    "    {\n",
+    "        \"start_time\": 40\n",
+    "        \"end_time\": 55\n",
+    "        \"tubes\": [(t, x1, x2, y1, y2), ...]\n",
+    "        \"event_class\": \"car_tracking\"\n",
+    "        \"event_id\": 2\n",
+    "        \"metadata\": {\n",
+    "            \"car_id\": 1,\n",
+    "            \"car_color\": \"red\", \n",
+    "            \"car_brand\": \"Toyota\"\n",
+    "        }\n",
+    "    }, \n",
+    "    {\n",
+    "        \"start_time\": 70\n",
+    "        \"end_time\": 80\n",
+    "        \"tubes\": [(t, x1, x2, y1, y2), ...]\n",
+    "        \"event_class\": \"car_tracking\"\n",
+    "        \"event_id\": 3\n",
+    "        \"metadata\": {\n",
+    "            \"car_id\": 3\n",
+    "            \"car_color\": \"white\", \n",
+    "            \"car_brand\": \"Audi\"\n",
+    "        }\n",
+    "    }, \n",
+    "    {\n",
+    "        \"start_time\": 90\n",
+    "        \"end_time\": 100\n",
+    "        \"tubes\": [(t, x1, x2, y1, y2), ...]\n",
+    "        \"event_class\": \"car_tracking\"\n",
+    "        \"event_id\": 4\n",
+    "        \"metadata\": {\n",
+    "            \"car_id\": 3\n",
+    "            \"car_color\": \"white\", \n",
+    "            \"car_brand\": \"Audi\"\n",
+    "        }\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# Car search parking \n",
+    "car_search_parking = [\n",
+    "    {\n",
+    "        \"start_time\": 0\n",
+    "        \"end_time\": 55\n",
+    "        \"tubes\": [(t, x1, x2, y1, y2), ...]\n",
+    "        \"event_class\": \"car_search_parking\"\n",
+    "        \"event_id\": 5\n",
+    "        \"metadata\": {\n",
+    "            \"car_id\": 1,\n",
+    "            \"car_color\": \"red\", \n",
+    "            \"car_brand\": \"Toyota\"\n",
+    "        }\n",
+    "    }, \n",
+    "    {\n",
+    "        \"start_time\": 70\n",
+    "        \"end_time\": 100\n",
+    "        \"tubes\": [(t, x1, x2, y1, y2), ...]\n",
+    "        \"event_class\": \"car_search_parking\"\n",
+    "        \"event_id\": 6\n",
+    "        \"metadata\": {\n",
+    "            \"car_id\": 3\n",
+    "            \"car_color\": \"white\", \n",
+    "            \"car_brand\": \"Audi\"\n",
+    "        }\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# Query 4\n",
+    "{\n",
+    "    \"start_time\": 10\n",
+    "    \"end_time\": 24\n",
+    "    \"tubes\": [(t, x1, x2, y1, y2), ...]\n",
+    "    \"event_class\": \"group_of_cars\"\n",
+    "    \"event_id\": 5\n",
+    "    \"metadata\": {\n",
+    "        \"count\": 3\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    \"start_time\": 10\n",
+    "    \"end_time\": 80\n",
+    "    \"tubes\": [(t, x1, x2, y1, y2), ...]\n",
+    "    \"event_class\": \"light_heavy_light\"\n",
+    "    \"event_id\": 6\n",
+    "    \"metadata\": {}\n",
+    "}\n",
+    "\n",
+    "# Query 5\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,13 +718,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec690d1de1e64d20900276d6d52ed95c",
+       "model_id": "ec2987e3114645b48c1f5a183bb8bf2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -677,16 +848,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  0%|          | 0/2 [00:00<?, ?it/s]\u001b[A\n",
-      "100%|██████████| 2/2 [00:11<00:00,  5.58s/it]\u001b[A\n"
+      "100%|██████████| 2/2 [00:08<00:00,  4.32s/it]\n"
      ]
     }
    ],
@@ -709,18 +878,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c16b6eaa1cb14813a4fecf8aae0c8abc",
+       "model_id": "9fe1e6f66692497784f5f26eb3e25704",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VGridWidget(vgrid_spec={'compressed': True, 'data': b'x\\x9c\\xd4\\x9d\\xcb\\xae\\xa4\\xc9u\\x9d_\\xc5\\xe0\\xd8 \\xe2~\\xf…"
+       "VGridWidget(vgrid_spec={'compressed': True, 'data': b'x\\x9c\\xdc\\xbd\\xcb\\xae\\xacIv\\x9c\\xf9*B\\x8d\\x85\\x82\\xdf/=\\…"
       ]
      },
      "metadata": {},
