finish the project

--- a/rekall/tutorials/Untitled.ipynb
+++ b/rekall/tutorials/Untitled.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'num_frames': '1203', 'height': 720, 'width': 1280, 'fps': 14.991276896236604, 'filename': 'cabc30fc-e7726578.mov', 'id': 0}, {'num_frames': '1204', 'height': 720, 'width': 1280, 'fps': 14.999377102279805, 'filename': 'cabc30fc-eb673c5a.mov', 'id': 1}, {'num_frames': '1203', 'height': 720, 'width': 1280, 'fps': 15.003117854915818, 'filename': 'cabc30fc-fd79926f.mov', 'id': 2}, {'num_frames': '1207', 'height': 720, 'width': 1280, 'fps': 15.076820585418663, 'filename': 'cabc9045-1b8282ba.mov', 'id': 3}, {'num_frames': '1210', 'height': 720, 'width': 1280, 'fps': 15.038528461347253, 'filename': 'cabc9045-5a50690f.mov', 'id': 4}]\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "[{'num_frames': '1203', 'height': 720, 'width': 1280, 'fps': 29.982553792473208, 'filename': 'cabc30fc-e7726578.mov', 'id': 0}, {'num_frames': '1204', 'height': 720, 'width': 1280, 'fps': 29.99875420455961, 'filename': 'cabc30fc-eb673c5a.mov', 'id': 1}, {'num_frames': '1203', 'height': 720, 'width': 1280, 'fps': 30.006235709831635, 'filename': 'cabc30fc-fd79926f.mov', 'id': 2}, {'num_frames': '1207', 'height': 720, 'width': 1280, 'fps': 30.153641170837325, 'filename': 'cabc9045-1b8282ba.mov', 'id': 3}, {'num_frames': '1210', 'height': 720, 'width': 1280, 'fps': 30.077056922694506, 'filename': 'cabc9045-5a50690f.mov', 'id': 4}]\n"
      ]
     }
    ],
@@ -48,13 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de461f0e3b694381b0fdb21e05ec97bd",
+       "model_id": "d41cb8baa372425b846a8dd2d9692a4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -73,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'traffic light': 5707, 'car': 22441, 'bicycle': 306, 'baseball bat': 1, 'book': 1, 'person': 1554, 'umbrella': 14, 'bus': 409, 'truck': 1023, 'stop sign': 14, 'bench': 158, 'motorbike': 319, 'handbag': 16, 'train': 5, 'parking meter': 2, 'backpack': 5, 'vase': 1, 'fire hydrant': 8, 'tvmonitor': 12, 'mouse': 9, 'sheep': 7, 'aeroplane': 2, 'boat': 3, 'surfboard': 3, 'chair': 42, 'skis': 1, 'pottedplant': 4, 'kite': 5, 'suitcase': 10, 'microwave': 1, 'toilet': 1}\n"
+      "{'traffic light': 11456, 'car': 44945, 'bicycle': 598, 'baseball bat': 1, 'book': 1, 'person': 3083, 'umbrella': 30, 'bus': 805, 'train': 11, 'truck': 2063, 'stop sign': 37, 'bench': 331, 'motorbike': 635, 'handbag': 32, 'chair': 76, 'parking meter': 2, 'elephant': 1, 'backpack': 8, 'cup': 1, 'pottedplant': 14, 'vase': 2, 'fire hydrant': 14, 'skateboard': 3, 'tvmonitor': 24, 'mouse': 16, 'clock': 1, 'sheep': 12, 'aeroplane': 5, 'suitcase': 20, 'bottle': 1, 'boat': 8, 'surfboard': 6, 'skis': 2, 'kite': 12, 'horse': 1, 'microwave': 3, 'toilet': 1}\n"
      ]
     }
    ],
@@ -97,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,13 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23c76f6107314983aa83a980700c22f9",
+       "model_id": "7dbab4cb361e4a0eba4890bfe4f3b360",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,12 +128,12 @@
     }
    ],
    "source": [
-    "visualize_helper([truck])"
+    "visualize_helper([car])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +193,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 3446.43it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00, 10324.44it/s]\n"
      ]
     }
    ],
@@ -220,21 +218,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 699.17it/s]"
+      "100%|██████████| 5/5 [00:00<00:00, 1017.15it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "query time:  5.967398643493652\n"
+      "query time:  12.639005422592163\n"
      ]
     },
     {
@@ -247,7 +245,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "789bfc0f57aa4a04b9bbe7235cb9b954",
+       "model_id": "bb516ced8eb042ee8aaabc399ccdc39e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -338,26 +336,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:00<00:00, 825.89it/s]\n",
-      "100%|██████████| 2/2 [00:00<00:00, 11.94it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 136.22it/s]\n",
+      "100%|██████████| 5/5 [00:00<00:00, 10.24it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "query time:  2.9348528385162354\n"
+      "query time:  3.7051639556884766\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68f8f98d064944d7894f95085f9f2e6a",
+       "model_id": "311da3777a2d43ccaf93af74fd778eeb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VGridWidget(vgrid_spec={'interval_blocks': [{'interval_sets': [{'name': '0', 'interval_set': [{'bounds': {'t1'…"
+       "VGridWidget(vgrid_spec={'interval_blocks': [], 'settings': {'spinner_dev_mode': False, 'key_mode': 'Jupyter', …"
       ]
      },
      "metadata": {},
@@ -421,27 +426,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: [<Interval t1:51.4 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.4 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.4 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.4 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.4 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.4 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.4 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.4 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.6 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.6 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.6 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.6 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.6 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.6 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.6 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.6 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.7 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.7 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.7 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.7 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.7 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.7 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.7 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.7 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.8 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.8 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.8 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.8 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.8 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.8 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.8 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.8 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.9 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.9 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.9 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.9 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.9 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.9 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.9 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:51.9 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.0 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.0 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.0 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.0 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.0 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.0 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.0 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.0 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.1 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.1 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.1 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.1 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.1 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.1 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.1 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.1 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.2 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.2 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.2 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.2 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.2 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.2 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.2 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.2 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.5 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.5 t2:71.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.5 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.5 t2:71.9 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.5 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.5 t2:74.4 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.5 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>, <Interval t1:52.5 t2:74.5 x1:0.3 x2:0.7 y1:0.3 y2:0.7 payload:None>]}\n"
+      "{}\n"
      ]
     }
    ],
    "source": [
     "print(ls5_gt20_ls5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Negation Query\n",
-    "Q1: \n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\begin{split}\n",
-    "     &\\text{PATTERN } person; !car; person \\\\\n",
-    "    &\\text{WITHIN } 10\\text{ minutes}\n",
-    "\\end{split}\n",
-    "\\end{equation}"
    ]
   }
  ],
