--- a/src/datalog/results.ipynb
+++ b/src/datalog/results.ipynb
@@ -540,10 +540,168 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# q1.2.sql with iou\n",
+    "- postgres + create view: 10.467s (last time)\n",
+    "- postgres + temporary table: 5.739s\n",
+    "    * g2seq: 2.555s\n",
+    "    * g1seq: 2.527s\n",
+    "    * g2seq_a: 0.251s\n",
+    "    * g1seq_a: 0.092s\n",
+    "- souffle (8 jobs): 14.683s\n",
+    "    * g2seq_a: 6.32s\n",
+    "    * g2seq: 3.68s\n",
+    "    * g1seq: 3.41s\n",
+    "    * g1seq_a: 0.290s\n",
+    "\n",
+    "# q1.2.sql without iou\n",
+    "- souffle (8 jobs): 22.255s\n",
+    "    * g1seq: 8.31s\n",
+    "    * g2seq_a: 6.66s\n",
+    "    * g1seq_a: 3.01s\n",
+    "    * g2seq: 2.92s\n",
+    "- postgres: couldn't finish (no space left on device)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# With iou, q1.2.sql, postgresql                                                                        \n",
+    "```\n",
+    "                                                                        QUERY PLAN                                                                        \n",
+    "----------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+    " HashAggregate  (cost=15066919.31..15067319.31 rows=40000 width=8) (actual time=3182.296..3263.041 rows=370145 loops=1)\n",
+    "   Group Key: person_seq.fid1, person_seq.fid2\n",
+    "   CTE person_seq\n",
+    "     ->  Recursive Union  (cost=0.00..11642445.84 rows=128417755 width=40) (actual time=0.007..2572.169 rows=1132360 loops=1)\n",
+    "           ->  Seq Scan on person  (cost=0.00..509.55 rows=27755 width=40) (actual time=0.006..3.138 rows=27755 loops=1)\n",
+    "           ->  Merge Join  (cost=38236.62..907358.12 rows=12839000 width=40) (actual time=1.548..9.213 rows=4298 loops=257)\n",
+    "                 Merge Cond: (p.fid = ((s.fid2 + 1)))\n",
+    "                 Join Filter: (get_iou(s.x1, s.y1, s.x2, s.y2, p.x1, p.y1, p.x2, p.y2) > '0.5'::double precision)\n",
+    "                 Rows Removed by Join Filter: 7153\n",
+    "                 ->  Index Scan using idx_person on person p  (cost=0.29..1656.61 rows=27755 width=36) (actual time=0.004..2.593 rows=25675 loops=257)\n",
+    "                 ->  Materialize  (cost=38236.33..39624.08 rows=277550 width=40) (actual time=1.181..2.209 rows=11485 loops=257)\n",
+    "                       ->  Sort  (cost=38236.33..38930.21 rows=277550 width=40) (actual time=1.179..1.383 rows=4406 loops=257)\n",
+    "                             Sort Key: ((s.fid2 + 1))\n",
+    "                             Sort Method: quicksort  Memory: 25kB\n",
+    "                             ->  WorkTable Scan on person_seq s  (cost=0.00..5551.00 rows=277550 width=40) (actual time=0.000..0.614 rows=4406 loops=257)\n",
+    "   ->  CTE Scan on person_seq  (cost=0.00..3210443.88 rows=42805918 width=8) (actual time=1080.804..3010.995 rows=558347 loops=1)\n",
+    "         Filter: ((fid2 - fid1) > 30)\n",
+    "         Rows Removed by Filter: 574013\n",
+    " Planning time: 0.243 ms\n",
+    " Execution time: 3360.944 ms\n",
+    "```\n",
+    "# Without iou, q1.2.sql, postgresql  \n",
+    "``` \n",
+    "                                                QUERY PLAN                                                 \n",
+    "-----------------------------------------------------------------------------------------------------------\n",
+    " HashAggregate  (cost=25086196.39..25086596.39 rows=40000 width=8)\n",
+    "   Group Key: person_seq.fid1, person_seq.fid2\n",
+    "   CTE person_seq\n",
+    "     ->  Recursive Union  (cost=0.00..14814255.99 rows=385197765 width=8)\n",
+    "           ->  Seq Scan on person  (cost=0.00..509.55 rows=27755 width=8)\n",
+    "           ->  Merge Join  (cost=34442.62..710979.11 rows=38517001 width=8)\n",
+    "                 Merge Cond: (p.fid = ((s.fid2 + 1)))\n",
+    "                 ->  Index Only Scan using idx_person on person p  (cost=0.29..1656.61 rows=27755 width=4)\n",
+    "                 ->  Materialize  (cost=34442.33..35830.08 rows=277550 width=8)\n",
+    "                       ->  Sort  (cost=34442.33..35136.21 rows=277550 width=8)\n",
+    "                             Sort Key: ((s.fid2 + 1))\n",
+    "                             ->  WorkTable Scan on person_seq s  (cost=0.00..5551.00 rows=277550 width=8)\n",
+    "   ->  CTE Scan on person_seq  (cost=0.00..9629944.12 rows=128399255 width=8)\n",
+    "         Filter: ((fid2 - fid1) > 30)   \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# bdd, q1, postgres: \n",
+    "- person trajectory (> 30 frames), followed by car trajectory (> 30), window size < 100.\n",
+    "```\n",
+    "DROP FUNCTION\n",
+    "Time: 1.548 ms\n",
+    "DROP INDEX\n",
+    "Time: 5.969 ms\n",
+    "CREATE INDEX\n",
+    "Time: 724.240 ms\n",
+    "CREATE FUNCTION\n",
+    "Time: 1.283 ms\n",
+    "SELECT 174593\n",
+    "Time: 209.285 ms\n",
+    "SELECT 1153111\n",
+    "Time: 596.161 ms\n",
+    "CREATE INDEX\n",
+    "Time: 53.848 ms\n",
+    "CREATE INDEX\n",
+    "Time: 381.433 ms\n",
+    "SELECT 851772\n",
+    "Time: 17762.156 ms (00:17.762) --> person_seq\n",
+    "SELECT 7709\n",
+    "Time: 241.726 ms\n",
+    "SELECT 213\n",
+    "Time: 3.087 ms\n",
+    "SELECT 213\n",
+    "Time: 727.399 ms\n",
+    "CREATE INDEX\n",
+    "Time: 1.277 ms\n",
+    "SELECT 37084431\n",
+    "Time: 402665.598 ms (06:42.666) --> car_seq\n",
+    "CREATE INDEX\n",
+    "Time: 15081.102 ms (00:15.081) --> car_seq_a\n",
+    "SELECT 102042\n",
+    "Time: 8831.243 ms (00:08.831) --> car_seq_b\n",
+    "SELECT 1304\n",
+    "Time: 24.662 ms\n",
+    "CREATE INDEX\n",
+    "Time: 1.547 ms\n",
+    "SELECT 1316\n",
+    "Time: 15.163 ms\n",
+    "CREATE INDEX\n",
+    "Time: 1.624 ms\n",
+    "SELECT 181\n",
+    "Time: 4.294 ms\n",
+    "COPY 181\n",
+    "Time: 2.973 ms\n",
+    "```\n",
+    "\n",
+    "# bdd, q2, postgres:\n",
+    "- car trajectory (> 30), starting from left, ending with right.\n",
+    "```\n",
+    "DROP FUNCTION\n",
+    "Time: 0.962 ms\n",
+    "DROP INDEX\n",
+    "Time: 5.807 ms\n",
+    "CREATE INDEX\n",
+    "Time: 713.876 ms\n",
+    "CREATE FUNCTION\n",
+    "Time: 1.192 ms\n",
+    "SELECT 1153111\n",
+    "Time: 552.183 ms\n",
+    "CREATE INDEX\n",
+    "Time: 371.640 ms\n",
+    "SELECT 37084431\n",
+    "Time: 380110.509 ms (06:20.111) --> car_seq\n",
+    "SELECT 102042\n",
+    "Time: 9351.722 ms (00:09.352) --> car_seq_a\n",
+    "SELECT 1304\n",
+    "Time: 34.394 ms\n",
+    "SELECT 1316\n",
+    "Time: 34099.305 ms (00:34.099) --> car_filtered\n",
+    "SELECT 32\n",
+    "Time: 10.496 ms\n",
+    "COPY 32\n",
+    "Time: 0.522 ms\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
